@@ -101,6 +101,7 @@
       <li><a href="rdoc/classes/Roda/RodaPlugins/HashMatcher.html">hash_matcher</a>: Adds hash_matcher class method for easily defining hash matchers.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/HeaderMatchers.html">header_matchers</a>: Adds matchers using information from the request headers.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/MatchAffix.html">match_affix</a>: Adds support for overriding default prefix/suffix used in match patterns.</li>
+      <li><a href="rdoc/classes/Roda/RodaPlugins/MultibyteStringMatcher.html">multibyte_string_matcher</a>: Makes string matcher handle multibyte characters.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/ParamMatchers.html">param_matchers</a>: Adds matchers using information from the request params.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/ParamsCapturing.html">params_capturing</a>: Stores matcher captures in the request params.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/PathMatchers.html">path_matchers</a>: Adds matchers using information from the request path.</li>
