@@ -1,5 +1,7 @@
 = master
 
+* Add multibyte_string_matcher plugin for matching multibyte characters (jeremyevans)
+
 * Split roda.rb into separate files (janko) (#177)
 
 = 3.26.0 (2019-11-18)
